@@ -10,12 +10,13 @@ import com.example.expensetracker.repository.CategoryRepository;
 import com.example.expensetracker.service.ExpenseService;
 import com.example.expensetracker.service.ImportService;
 import com.example.expensetracker.service.IncomeService;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import org.apache.poi.ss.usermodel.*;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -25,49 +26,42 @@ import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.util.*;
 
 /**
- * Production implementation of {@link ImportService} responsible for reading,
- * parsing, validating, and bulk-importing financial data from CSV, JSON, and Microsoft Excel files.
+ * Production implementation of {@link ImportService} supporting CSV, JSON, and Excel (.xlsx)
+ * batch ingestion for expenses and income streams.
  *
- * <p>Key characteristics:
+ * <h3>Key design decisions:</h3>
  * <ul>
- *   <li><b>Dynamic column ordering:</b> Columns are identified by header name (case-insensitive) rather than fixed column index across CSV and Excel formats.</li>
- *   <li><b>Fault-tolerant partial imports:</b> Individual row failures are captured and reported, allowing valid rows to persist without aborting the entire dataset.</li>
- *   <li><b>Dynamic Category resolution:</b> Creates missing personal categories on-the-fly for the user when importing expenses.</li>
- *   <li><b>Multi-format Excel support:</b> Seamlessly parses both legacy {@code .xls} and modern {@code .xlsx} workbooks.</li>
+ *   <li><b>Fault tolerance:</b> individual row failures do not abort the entire batch.
+ *       Instead, successful rows are committed and failed rows are captured with line numbers
+ *       and specific reason messages in the response payload.</li>
+ *   <li><b>User isolation:</b> all imported records are strictly associated with the
+ *       authenticated {@link User}. Category resolution ensures users only see their own
+ *       custom categories or system globals — no cross-user category pollution.</li>
+ *   <li><b>Flexible column mappings:</b> headers are matched case-insensitively with common
+ *       aliases (e.g. "cost", "price", "amount" all map to amount).</li>
  * </ul>
- * </p>
  *
  * @author Yogeshwaran
+ * @version 1.0
  */
+@Slf4j
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ImportServiceImpl implements ImportService {
 
-    private static final Logger logger = LoggerFactory.getLogger(ImportServiceImpl.class);
+    private static final String COL_SOURCE = "source";
 
     private final ExpenseService expenseService;
     private final IncomeService incomeService;
     private final CategoryRepository categoryRepository;
-    private final ObjectMapper objectMapper;
-
-    /**
-     * Constructs a new {@code ImportServiceImpl} with necessary services and repositories.
-     *
-     * @param expenseService the expense management service
-     * @param incomeService the income management service
-     * @param categoryRepository repository for querying and saving expense categories
-     */
-    public ImportServiceImpl(ExpenseService expenseService,
-                             IncomeService incomeService,
-                             CategoryRepository categoryRepository) {
-        this.expenseService = expenseService;
-        this.incomeService = incomeService;
-        this.categoryRepository = categoryRepository;
-        this.objectMapper = new ObjectMapper();
-        this.objectMapper.registerModule(new JavaTimeModule());
-    }
+    private final ObjectMapper objectMapper = new ObjectMapper().registerModule(new JavaTimeModule());
 
     // ─────────────────────────────────────────────────────────────────────────
     // EXPENSE IMPORTS
@@ -76,11 +70,15 @@ public class ImportServiceImpl implements ImportService {
     @Override
     @Transactional
     public Map<String, Object> importExpensesFromCsv(MultipartFile file, User user) {
-        if (file.isEmpty()) {
+        if (user == null) {
+            throw new IllegalArgumentException("User context cannot be null");
+        }
+        if (file == null || file.isEmpty()) {
             throw new IllegalArgumentException("Uploaded file is empty");
         }
 
         List<String> rowErrors = new ArrayList<>();
+        Map<String, Category> categoryCache = new HashMap<>();
         int count = 0;
 
         try (BufferedReader reader = new BufferedReader(
@@ -94,8 +92,7 @@ public class ImportServiceImpl implements ImportService {
             Map<String, Integer> col = parseHeader(headerLine);
             if (!col.containsKey("date") || !col.containsKey("category") || !col.containsKey("amount")) {
                 throw new IllegalArgumentException(
-                        "CSV must contain at least 'date', 'category', and 'amount' headers. "
-                        + "Found: " + col.keySet()
+                        "CSV must contain at least 'date', 'category', and 'amount' headers. Found: " + col.keySet()
                 );
             }
 
@@ -108,28 +105,31 @@ public class ImportServiceImpl implements ImportService {
             int rowNum = 1;
             while ((line = reader.readLine()) != null) {
                 rowNum++;
-                if (line.trim().isEmpty()) continue;
+                if (line.trim().isEmpty()) {
+                    continue;
+                }
 
                 try {
-                    String[] parts = line.split(",(?=(?:[^\"]*\"[^\"]*\")*[^\"]*$)", -1);
+                    List<String> parts = parseCsvLine(line);
                     int maxNeeded = Math.max(dateIdx, Math.max(catIdx, amtIdx));
-                    if (parts.length <= maxNeeded) {
-                        rowErrors.add("Row " + rowNum + ": expected at least " + (maxNeeded + 1) + " columns, found " + parts.length + ".");
+                    if (parts.size() <= maxNeeded) {
+                        rowErrors.add("Row " + rowNum + ": expected at least " + (maxNeeded + 1)
+                                + " columns, found " + parts.size() + ".");
                         continue;
                     }
 
-                    String dateStr = parts[dateIdx].replace("\"", "").trim();
-                    String catStr  = parts[catIdx].replace("\"", "").trim();
-                    String amtStr  = parts[amtIdx].replace("\"", "").trim().replaceAll("[^0-9.\\-]", "");
-                    String desc    = (descIdx != null && descIdx < parts.length) ? parts[descIdx].replace("\"", "").trim() : "";
+                    String dateStr = parts.get(dateIdx).replace("\"", "").trim();
+                    String catStr  = parts.get(catIdx).replace("\"", "").trim();
+                    String amtStr  = parts.get(amtIdx).replace("\"", "").trim().replaceAll("[^0-9.\\-]", "");
+                    String desc    = (descIdx != null && descIdx < parts.size())
+                            ? parts.get(descIdx).replace("\"", "").trim() : "";
 
                     if (dateStr.isEmpty() || catStr.isEmpty() || amtStr.isEmpty()) {
                         rowErrors.add("Row " + rowNum + ": date, category, or amount is empty.");
                         continue;
                     }
 
-                    final String resolvedCat = catStr;
-                    Category category = resolveOrCreateCategoryForUser(resolvedCat, user);
+                    Category category = resolveOrCreateCategoryForUser(catStr, user, categoryCache);
 
                     Expense exp = new Expense();
                     exp.setExpenseDate(LocalDate.parse(dateStr));
@@ -146,8 +146,16 @@ public class ImportServiceImpl implements ImportService {
         } catch (IllegalArgumentException e) {
             throw e;
         } catch (Exception e) {
-            logger.error("Failed to read expense CSV file for user {}", user.getId(), e);
+            log.error("Failed to read expense CSV file for user {}", user.getId(), e);
             throw new RuntimeException("Failed to read CSV file: " + e.getMessage(), e);
+        }
+
+        if (count == 0) {
+            if (rowErrors.isEmpty()) {
+                throw new IllegalArgumentException("CSV file contains no expense data rows to import");
+            }
+            throw new IllegalArgumentException("Failed to import expenses: all " + rowErrors.size()
+                    + " rows failed (" + String.join("; ", rowErrors) + ")");
         }
 
         Map<String, Object> result = new LinkedHashMap<>();
@@ -162,27 +170,42 @@ public class ImportServiceImpl implements ImportService {
     @Override
     @Transactional
     public Map<String, Object> importExpensesFromJson(MultipartFile file, User user) {
-        if (file.isEmpty()) {
+        if (user == null) {
+            throw new IllegalArgumentException("User context cannot be null");
+        }
+        if (file == null || file.isEmpty()) {
             throw new IllegalArgumentException("Uploaded file is empty");
         }
 
         try {
-            List<ExpenseDto> dtos = objectMapper.readValue(file.getInputStream(), new TypeReference<List<ExpenseDto>>() {});
+            List<ExpenseDto> dtos = objectMapper.readValue(file.getInputStream(), new TypeReference<>() {});
+            if (dtos == null || dtos.isEmpty()) {
+                throw new IllegalArgumentException("JSON file contains no expenses to import");
+            }
+            Map<String, Category> categoryCache = new HashMap<>();
             int count = 0;
             for (ExpenseDto dto : dtos) {
+                if (dto == null) {
+                    throw new IllegalArgumentException("Expense record in JSON cannot be null");
+                }
                 Category category = null;
-                if (dto.getCategoryName() != null && !dto.getCategoryName().isBlank()) {
-                    category = resolveOrCreateCategoryForUser(dto.getCategoryName().trim(), user);
+                if (dto.categoryName() != null && !dto.categoryName().isBlank()) {
+                    category = resolveOrCreateCategoryForUser(dto.categoryName().trim(), user, categoryCache);
                 }
                 Expense expense = new Expense();
-                BigDecimal amount = dto.getAmount();
+                BigDecimal amount = dto.amount();
                 if (amount == null || amount.compareTo(BigDecimal.ZERO) <= 0) {
                     throw new IllegalArgumentException("Amount must be greater than zero");
                 }
                 expense.setAmount(amount);
-                expense.setDescription(dto.getDescription());
-                expense.setExpenseDate(dto.getExpenseDate() != null ? dto.getExpenseDate() : LocalDate.now());
+                expense.setExpenseDate(dto.expenseDate() != null ? dto.expenseDate() : LocalDate.now());
+                String desc = dto.description();
+                if (desc == null || desc.isBlank()) {
+                    desc = dto.categoryName() != null ? dto.categoryName() : "Expense";
+                }
+                expense.setDescription(desc);
                 expense.setCategory(category);
+                expense.setUser(user);
 
                 expenseService.createExpense(expense, user);
                 count++;
@@ -192,8 +215,13 @@ public class ImportServiceImpl implements ImportService {
             result.put("imported", count);
             result.put("message", "Imported " + count + " expenses successfully");
             return result;
+        } catch (IllegalArgumentException e) {
+            throw e;
+        } catch (JsonProcessingException e) {
+            log.warn("Malformed JSON file during expense import for user {}: {}", user.getId(), e.getMessage());
+            throw new IllegalArgumentException("Malformed JSON file: " + e.getOriginalMessage(), e);
         } catch (Exception e) {
-            logger.error("Failed to import expenses from JSON for user {}", user.getId(), e);
+            log.error("Failed to import expenses from JSON for user {}", user.getId(), e);
             throw new RuntimeException("Error importing expenses from JSON: " + e.getMessage(), e);
         }
     }
@@ -201,11 +229,15 @@ public class ImportServiceImpl implements ImportService {
     @Override
     @Transactional
     public Map<String, Object> importExpensesFromExcel(MultipartFile file, User user) {
+        if (user == null) {
+            throw new IllegalArgumentException("User context cannot be null");
+        }
         if (file == null || file.isEmpty()) {
             throw new IllegalArgumentException("Uploaded file is empty");
         }
         int count = 0;
         List<String> errors = new ArrayList<>();
+        Map<String, Category> categoryCache = new HashMap<>();
 
         try (Workbook workbook = WorkbookFactory.create(file.getInputStream())) {
             Sheet sheet = workbook.getSheet("Expenses");
@@ -236,13 +268,16 @@ public class ImportServiceImpl implements ImportService {
 
             if (dateCol == null || catCol == null || amtCol == null) {
                 throw new IllegalArgumentException(
-                        "Excel sheet must contain at least: Date, Category, and Amount headers. Found: " + colMap.keySet()
+                        "Excel sheet must contain at least: Date, Category, and Amount headers. Found: "
+                                + colMap.keySet()
                 );
             }
 
             for (int r = 1; r <= sheet.getLastRowNum(); r++) {
                 Row row = sheet.getRow(r);
-                if (row == null || isRowEmpty(row)) continue;
+                if (row == null || isRowEmpty(row)) {
+                    continue;
+                }
 
                 try {
                     Cell dateCell = row.getCell(dateCol);
@@ -261,7 +296,7 @@ public class ImportServiceImpl implements ImportService {
 
                     String description = descCol != null ? getCellValueAsString(row.getCell(descCol)).trim() : "";
 
-                    Category category = resolveOrCreateCategoryForUser(catName, user);
+                    Category category = resolveOrCreateCategoryForUser(catName, user, categoryCache);
 
                     Expense expense = new Expense();
                     expense.setAmount(amount);
@@ -279,8 +314,16 @@ public class ImportServiceImpl implements ImportService {
         } catch (IllegalArgumentException e) {
             throw e;
         } catch (Exception e) {
-            logger.error("Failed to parse Excel file for expenses", e);
+            log.error("Failed to parse Excel file for expenses", e);
             throw new RuntimeException("Failed to read Excel workbook: " + e.getMessage(), e);
+        }
+
+        if (count == 0) {
+            if (errors.isEmpty()) {
+                throw new IllegalArgumentException("Excel sheet contains no expense data rows to import");
+            }
+            throw new IllegalArgumentException("Failed to import expenses: all " + errors.size()
+                    + " rows failed (" + String.join("; ", errors) + ")");
         }
 
         Map<String, Object> result = new LinkedHashMap<>();
@@ -299,7 +342,10 @@ public class ImportServiceImpl implements ImportService {
     @Override
     @Transactional
     public Map<String, Object> importIncomesFromCsv(MultipartFile file, User user) {
-        if (file.isEmpty()) {
+        if (user == null) {
+            throw new IllegalArgumentException("User context cannot be null");
+        }
+        if (file == null || file.isEmpty()) {
             throw new IllegalArgumentException("Uploaded file is empty");
         }
 
@@ -315,7 +361,7 @@ public class ImportServiceImpl implements ImportService {
             }
 
             Map<String, Integer> col = parseHeader(headerLine);
-            if (!col.containsKey("date") || !col.containsKey("source") || !col.containsKey("amount")) {
+            if (!col.containsKey("date") || !col.containsKey(COL_SOURCE) || !col.containsKey("amount")) {
                 throw new IllegalArgumentException(
                         "CSV must contain at least 'date', 'source', and 'amount' headers. "
                         + "Found: " + col.keySet()
@@ -323,7 +369,7 @@ public class ImportServiceImpl implements ImportService {
             }
 
             int dateIdx = col.get("date");
-            int srcIdx  = col.get("source");
+            int srcIdx  = col.get(COL_SOURCE);
             int amtIdx  = col.get("amount");
             Integer descIdx = col.get("description");
 
@@ -331,20 +377,24 @@ public class ImportServiceImpl implements ImportService {
             int rowNum = 1;
             while ((line = reader.readLine()) != null) {
                 rowNum++;
-                if (line.trim().isEmpty()) continue;
+                if (line.trim().isEmpty()) {
+                    continue;
+                }
 
                 try {
-                    String[] parts = line.split(",(?=(?:[^\"]*\"[^\"]*\")*[^\"]*$)", -1);
+                    List<String> parts = parseCsvLine(line);
                     int maxNeeded = Math.max(dateIdx, Math.max(srcIdx, amtIdx));
-                    if (parts.length <= maxNeeded) {
-                        rowErrors.add("Row " + rowNum + ": expected at least " + (maxNeeded + 1) + " columns, found " + parts.length + ".");
+                    if (parts.size() <= maxNeeded) {
+                        rowErrors.add("Row " + rowNum + ": expected at least " + (maxNeeded + 1)
+                                + " columns, found " + parts.size() + ".");
                         continue;
                     }
 
-                    String dateStr = parts[dateIdx].replace("\"", "").trim();
-                    String sourceStr = parts[srcIdx].replace("\"", "").trim();
-                    String amtStr = parts[amtIdx].replace("\"", "").trim().replaceAll("[^0-9.\\-]", "");
-                    String desc = (descIdx != null && descIdx < parts.length) ? parts[descIdx].replace("\"", "").trim() : "";
+                    String dateStr = parts.get(dateIdx).replace("\"", "").trim();
+                    String sourceStr = parts.get(srcIdx).replace("\"", "").trim();
+                    String amtStr = parts.get(amtIdx).replace("\"", "").trim().replaceAll("[^0-9.\\-]", "");
+                    String desc = (descIdx != null && descIdx < parts.size())
+                            ? parts.get(descIdx).replace("\"", "").trim() : "";
 
                     if (dateStr.isEmpty() || sourceStr.isEmpty() || amtStr.isEmpty()) {
                         rowErrors.add("Row " + rowNum + ": date, source, or amount is empty.");
@@ -368,8 +418,16 @@ public class ImportServiceImpl implements ImportService {
         } catch (IllegalArgumentException e) {
             throw e;
         } catch (Exception e) {
-            logger.error("Failed to read income CSV file for user {}", user.getId(), e);
+            log.error("Failed to read income CSV file for user {}", user.getId(), e);
             throw new RuntimeException("Failed to read CSV file: " + e.getMessage(), e);
+        }
+
+        if (count == 0) {
+            if (rowErrors.isEmpty()) {
+                throw new IllegalArgumentException("CSV file contains no income data rows to import");
+            }
+            throw new IllegalArgumentException("Failed to import incomes: all " + rowErrors.size()
+                    + " rows failed (" + String.join("; ", rowErrors) + ")");
         }
 
         Map<String, Object> result = new LinkedHashMap<>();
@@ -384,20 +442,35 @@ public class ImportServiceImpl implements ImportService {
     @Override
     @Transactional
     public Map<String, Object> importIncomesFromJson(MultipartFile file, User user) {
-        if (file.isEmpty()) {
+        if (user == null) {
+            throw new IllegalArgumentException("User context cannot be null");
+        }
+        if (file == null || file.isEmpty()) {
             throw new IllegalArgumentException("Uploaded file is empty");
         }
 
         try {
-            List<IncomeDto> dtos = objectMapper.readValue(file.getInputStream(), new TypeReference<List<IncomeDto>>() {});
+            List<IncomeDto> dtos = objectMapper.readValue(file.getInputStream(), new TypeReference<>() {});
+            if (dtos == null || dtos.isEmpty()) {
+                throw new IllegalArgumentException("JSON file contains no incomes to import");
+            }
             int count = 0;
             for (IncomeDto dto : dtos) {
+                if (dto == null) {
+                    throw new IllegalArgumentException("Income record in JSON cannot be null");
+                }
+                if (dto.amount() == null || dto.amount().compareTo(BigDecimal.ZERO) <= 0) {
+                    throw new IllegalArgumentException("Income amount must be greater than zero");
+                }
+                if (dto.source() == null || dto.source().isBlank()) {
+                    throw new IllegalArgumentException("Income source cannot be blank");
+                }
                 IncomeRequest req = new IncomeRequest(
-                        dto.getAmount() != null ? dto.getAmount() : BigDecimal.ZERO,
-                        dto.getSource() != null ? dto.getSource() : "General",
-                        dto.getDescription(),
-                        dto.getIncomeDate() != null ? dto.getIncomeDate() : LocalDate.now(),
-                        dto.getIsRecurring() != null ? dto.getIsRecurring() : false
+                        dto.amount(),
+                        dto.source(),
+                        dto.description(),
+                        dto.incomeDate() != null ? dto.incomeDate() : LocalDate.now(),
+                        Boolean.TRUE.equals(dto.isRecurring())
                 );
                 incomeService.createIncome(req, user);
                 count++;
@@ -407,8 +480,13 @@ public class ImportServiceImpl implements ImportService {
             result.put("imported", count);
             result.put("message", "Imported " + count + " income records successfully");
             return result;
+        } catch (IllegalArgumentException e) {
+            throw e;
+        } catch (JsonProcessingException e) {
+            log.warn("Malformed JSON file during income import for user {}: {}", user.getId(), e.getMessage());
+            throw new IllegalArgumentException("Malformed JSON file: " + e.getOriginalMessage(), e);
         } catch (Exception e) {
-            logger.error("Failed to import incomes from JSON for user {}", user.getId(), e);
+            log.error("Failed to import incomes from JSON for user {}", user.getId(), e);
             throw new RuntimeException("Error importing incomes from JSON: " + e.getMessage(), e);
         }
     }
@@ -416,6 +494,9 @@ public class ImportServiceImpl implements ImportService {
     @Override
     @Transactional
     public Map<String, Object> importIncomesFromExcel(MultipartFile file, User user) {
+        if (user == null) {
+            throw new IllegalArgumentException("User context cannot be null");
+        }
         if (file == null || file.isEmpty()) {
             throw new IllegalArgumentException("Uploaded file is empty");
         }
@@ -445,20 +526,23 @@ public class ImportServiceImpl implements ImportService {
             }
 
             Integer dateCol = findColumn(colMap, "date", "incomedate", "transactiondate");
-            Integer srcCol = findColumn(colMap, "source", "incomesource", "channel", "payer");
+            Integer srcCol = findColumn(colMap, COL_SOURCE, "incomesource", "channel", "payer");
             Integer amtCol = findColumn(colMap, "amount", "income", "earnings", "sum");
             Integer descCol = findColumn(colMap, "description", "desc", "note", "notes");
             Integer recCol = findColumn(colMap, "recurring", "isrecurring");
 
             if (dateCol == null || srcCol == null || amtCol == null) {
                 throw new IllegalArgumentException(
-                        "Excel sheet must contain at least: Date, Source, and Amount headers. Found: " + colMap.keySet()
+                        "Excel sheet must contain at least: Date, Source, and Amount headers. Found: "
+                                + colMap.keySet()
                 );
             }
 
             for (int r = 1; r <= sheet.getLastRowNum(); r++) {
                 Row row = sheet.getRow(r);
-                if (row == null || isRowEmpty(row)) continue;
+                if (row == null || isRowEmpty(row)) {
+                    continue;
+                }
 
                 try {
                     Cell dateCell = row.getCell(dateCol);
@@ -498,8 +582,16 @@ public class ImportServiceImpl implements ImportService {
         } catch (IllegalArgumentException e) {
             throw e;
         } catch (Exception e) {
-            logger.error("Failed to parse Excel file for incomes", e);
+            log.error("Failed to parse Excel file for incomes", e);
             throw new RuntimeException("Failed to read Excel workbook: " + e.getMessage(), e);
+        }
+
+        if (count == 0) {
+            if (errors.isEmpty()) {
+                throw new IllegalArgumentException("Excel sheet contains no income data rows to import");
+            }
+            throw new IllegalArgumentException("Failed to import incomes: all " + errors.size()
+                    + " rows failed (" + String.join("; ", errors) + ")");
         }
 
         Map<String, Object> result = new LinkedHashMap<>();
@@ -515,11 +607,38 @@ public class ImportServiceImpl implements ImportService {
     // PARSING HELPERS
     // ─────────────────────────────────────────────────────────────────────────
 
+    private static List<String> parseCsvLine(String line) {
+        List<String> tokens = new ArrayList<>();
+        if (line == null) {
+            return tokens;
+        }
+        StringBuilder sb = new StringBuilder();
+        boolean inQuotes = false;
+        for (int i = 0; i < line.length(); i++) {
+            char c = line.charAt(i);
+            if (c == '"') {
+                if (inQuotes && i + 1 < line.length() && line.charAt(i + 1) == '"') {
+                    sb.append('"');
+                    i++;
+                } else {
+                    inQuotes = !inQuotes;
+                }
+            } else if (c == ',' && !inQuotes) {
+                tokens.add(sb.toString().trim());
+                sb.setLength(0);
+            } else {
+                sb.append(c);
+            }
+        }
+        tokens.add(sb.toString().trim());
+        return tokens;
+    }
+
     private Map<String, Integer> parseHeader(String headerLine) {
         Map<String, Integer> col = new HashMap<>();
-        String[] headers = headerLine.split(",(?=(?:[^\"]*\"[^\"]*\")*[^\"]*$)");
-        for (int i = 0; i < headers.length; i++) {
-            String name = headers[i].trim().replaceAll("^\"|\"$", "").toLowerCase(Locale.ROOT);
+        List<String> headers = parseCsvLine(headerLine);
+        for (int i = 0; i < headers.size(); i++) {
+            String name = headers.get(i).replace("\"", "").trim().toLowerCase(Locale.ROOT);
             col.put(name, i);
         }
         return col;
@@ -527,13 +646,17 @@ public class ImportServiceImpl implements ImportService {
 
     private Integer findColumn(Map<String, Integer> colMap, String... candidates) {
         for (String c : candidates) {
-            if (colMap.containsKey(c)) return colMap.get(c);
+            if (colMap.containsKey(c)) {
+                return colMap.get(c);
+            }
         }
         return null;
     }
 
     private String getCellValueAsString(Cell cell) {
-        if (cell == null) return "";
+        if (cell == null) {
+            return "";
+        }
         return switch (cell.getCellType()) {
             case STRING -> cell.getStringCellValue();
             case NUMERIC -> {
@@ -545,9 +668,9 @@ public class ImportServiceImpl implements ImportService {
             case BOOLEAN -> String.valueOf(cell.getBooleanCellValue());
             case FORMULA -> {
                 try {
-                    yield String.valueOf(cell.getNumericCellValue());
-                } catch (Exception e) {
                     yield cell.getStringCellValue();
+                } catch (Exception e) {
+                    yield String.valueOf(cell.getNumericCellValue());
                 }
             }
             default -> "";
@@ -555,28 +678,46 @@ public class ImportServiceImpl implements ImportService {
     }
 
     private LocalDate parseCellDate(Cell cell, String fallbackStr) {
-        if (cell != null && cell.getCellType() == CellType.NUMERIC && DateUtil.isCellDateFormatted(cell)) {
-            return cell.getLocalDateTimeCellValue().toLocalDate();
+        if (DateUtil.isCellDateFormatted(cell)) {
+            Date d = cell.getDateCellValue();
+            return d.toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
         }
-        if (fallbackStr == null || fallbackStr.isBlank()) {
-            throw new IllegalArgumentException("Date cannot be blank");
+        String s = fallbackStr.trim();
+        List<DateTimeFormatter> formatters = List.of(
+                DateTimeFormatter.ISO_LOCAL_DATE,
+                DateTimeFormatter.ofPattern("dd/MM/yyyy"),
+                DateTimeFormatter.ofPattern("MM/dd/yyyy"),
+                DateTimeFormatter.ofPattern("dd-MM-yyyy"),
+                DateTimeFormatter.ofPattern("yyyy/MM/dd")
+        );
+        for (DateTimeFormatter fmt : formatters) {
+            try {
+                return LocalDate.parse(s, fmt);
+            } catch (DateTimeParseException ignored) {
+                // Try next pattern
+            }
         }
-        return LocalDate.parse(fallbackStr.trim());
+        throw new IllegalArgumentException("Unrecognised date format: '" + s
+                + "'. Expected YYYY-MM-DD, DD/MM/YYYY, etc.");
     }
 
     private BigDecimal parseCellAmount(Cell cell) {
-        if (cell == null) return null;
-        if (cell.getCellType() == CellType.NUMERIC) {
-            return BigDecimal.valueOf(cell.getNumericCellValue());
+        if (cell == null) {
+            return null;
         }
-        String s = getCellValueAsString(cell).replace("$", "").replace(",", "").trim();
-        if (s.isBlank()) return null;
-        return new BigDecimal(s);
+        return switch (cell.getCellType()) {
+            case NUMERIC -> BigDecimal.valueOf(cell.getNumericCellValue());
+            case STRING -> {
+                String clean = cell.getStringCellValue().replaceAll("[^0-9.\\-]", "").trim();
+                yield clean.isEmpty() ? null : new BigDecimal(clean);
+            }
+            default -> null;
+        };
     }
 
     private boolean isRowEmpty(Row row) {
         for (Cell c : row) {
-            if (c.getCellType() != CellType.BLANK && !getCellValueAsString(c).trim().isEmpty()) {
+            if (!getCellValueAsString(c).isBlank()) {
                 return false;
             }
         }
@@ -584,21 +725,15 @@ public class ImportServiceImpl implements ImportService {
     }
 
     /**
-     * Resolves an existing user-scoped or global category by name (case-insensitive),
-     * or creates a new user-scoped category if no match is found.
-     * <p>
-     * <b>Security:</b> Previously this method used {@code findByNameIgnoreCase} which
-     * returned ANY category with that name — including other users' private categories.
-     * That created an IDOR vulnerability where user A's imported expenses could be linked
-     * to user B's private category. This method now scopes lookups to (a) the importing
-     * user's own categories and (b) global (user_id IS NULL) categories only.
-     * </p>
+     * Resolves a category by name for the given user, or falls back to a global category,
+     * or creates a new user-scoped category if none exists.
      *
-     * @param name the category name to resolve (must be non-blank)
-     * @param user the importing user (must be non-null)
+     * @param name the raw category name from the import file
+     * @param user the owning user
+     * @param categoryCache optional cache map (name lowercase -&gt; Category entity)
      * @return the resolved or newly created {@link Category}
      */
-    private Category resolveOrCreateCategoryForUser(String name, User user) {
+    private Category resolveOrCreateCategoryForUser(String name, User user, Map<String, Category> categoryCache) {
         if (name == null || name.isBlank()) {
             throw new IllegalArgumentException("Category name cannot be blank");
         }
@@ -606,20 +741,36 @@ public class ImportServiceImpl implements ImportService {
             throw new IllegalArgumentException("User context required for category resolution");
         }
         String trimmed = name.trim();
+        String cacheKey = trimmed.toLowerCase();
+        if (categoryCache != null && categoryCache.containsKey(cacheKey)) {
+            return categoryCache.get(cacheKey);
+        }
         // 1. Try user's own category first
         Optional<Category> userCat = categoryRepository.findByUserAndNameIgnoreCase(user, trimmed);
         if (userCat.isPresent()) {
-            return userCat.get();
+            Category cat = userCat.get();
+            if (categoryCache != null) {
+                categoryCache.put(cacheKey, cat);
+            }
+            return cat;
         }
         // 2. Fall back to a global category (user_id IS NULL)
         Optional<Category> globalCat = categoryRepository.findByUserIsNullAndNameIgnoreCase(trimmed);
         if (globalCat.isPresent()) {
-            return globalCat.get();
+            Category cat = globalCat.get();
+            if (categoryCache != null) {
+                categoryCache.put(cacheKey, cat);
+            }
+            return cat;
         }
         // 3. Otherwise create a new user-scoped category
         Category newCat = new Category();
         newCat.setName(trimmed);
         newCat.setUser(user);
-        return categoryRepository.save(newCat);
+        Category saved = categoryRepository.save(newCat);
+        if (categoryCache != null) {
+            categoryCache.put(cacheKey, saved);
+        }
+        return saved;
     }
 }
